# aya

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: lora_default.yaml
model/: adapter_config.json
model/checkpoint-26/: rng_state.pth  scheduler.pt  trainer_state.json
training/: config.py  conversor.py  evaluate.py  main.py  processor.py  training.py
training/data/: example_200_leaks.jsonl  example_dataset_alpaca.json
training/data_processor/: conversor.py  country_inferrer.py  data_validator.py  domain_analyzer.py  language_detector.py  leak_generator.py  leak_processor.py  personal_info_extractor.py  prompt_generator.py
training/tests/: test_config.py  test_country_inferrer.py  test_data_validator.py  test_domain_analyzer.py  test_leak_generator.py  test_personal_info_extractor.py  test_prompt_generator.py
